TestSuite/PascalABCTests/errors/err0175.pas
begin
var a : array[,] of integer := new integer[0,0]();  
end.